footer changed, spacing issue with header in all pages corrected

--- a/app/assets/stylesheets/events/show.css.sass
+++ b/app/assets/stylesheets/events/show.css.sass
@@ -9,6 +9,10 @@ $comment-text: #636a73
 $very-light-blue: #edf1f7
 $grey-backdrop-text: #636a73
 
+#events-show
+  margin-top: 50px !important
+
+
 .event-main-head
   background: $very-light-blue
   .event-title
