--- a/app/assets/stylesheets/plugins/common.css.sass
+++ b/app/assets/stylesheets/plugins/common.css.sass
@@ -8,7 +8,10 @@ $light-grey-text: #a0a8b1
 $comment-text: #636a73
 $very-light-blue: #edf1f7
 $grey-backdrop-text: #636a73
-      
+
+.main-content
+  padding-bottom: 0px !important
+  /* this will keep it close to footer */
 
 header
   box-shadow: none !important
@@ -38,7 +41,7 @@ header
   margin: auto
 
 .main-content
-  margin-top: 45px !important
+  margin-top: -20px !important
 
 .custom-green-filters
   .badge-custom-green
@@ -1330,3 +1333,40 @@ li.custom-ui-item
     height: 318px
     background-size: cover !important
     margin: 0px auto
+
+
+
+
+
+/*footer starts==========-------------*/
+.footerwrap 
+  background: #373841
+  background: url('/assets/footerbg.png') #373841
+  height: 230px
+.footer 
+  background: #373841
+  padding: 20px 0px
+
+  -webkit-box-sizing: border-box
+  -moz-box-sizing: border-box
+  -ms-box-sizing: border-box
+  box-sizing: border-box
+  color: #f1eee5
+  background: url('/assets/footerbg.png') #373841
+
+.cright 
+  margin: 20px 0px
+  color: #f1eee6
+  font-size: 15px
+
+.footlist 
+  list-style: none
+  color: #d7daeb
+  margin-left: 0px
+  li
+    margin-right: 20px
+    line-height: 25px
+    width: 120px
+    font-size: 15px
+
+/*footer ends==========-------------*/
